2007-10-12  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwflpp::setup): Added 'debuginfo_needed' parameter
	to not error if no debuginfo present.
	(hex_dump): New function.
	(mark_query::handle_query_module): Updated for
	10/2/2007 markers patch.  Currently only handles markers in the
	kernel image itself - not in modules.
	
2007-10-12  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (staprun_LDADD): Add -lpthread.
	* Makefile.in: Rebuilt.

2007-10-11  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Make -testsuite subrpm require dejagnu.

2007-10-10  Jim Keniston  <jkenisto@us.ibm.com>

	* runtime/uprobes/uprobes_ppc64.[ch]: Added
	* runtime/uprobes/uprobes_s390.[ch]: Added

2007-10-09  Jim Keniston  <jkenisto@us.ibm.com>

	PR 5083
	* runtime/uprobes/uprobes.c: Adjust module ref-count
	when creating or removing uprobe_process, so "rmmod
	--wait uprobes" waits as needed until uretprobed
	functions return.

2007-10-08  Jim Keniston  <jkenisto@us.ibm.com>

	PR 5079
	* main.cxx: Add pass 4.5: make uprobes.ko in runtime/uprobes
	* buildrun.cxx: Add uprobes_enabled() and make_uprobes().
	Factor run_make_cmd() out of compile_pass().
	* buildrun.h: Add uprobes_enabled and make_uprobes decls.
	* tapsets.cxx: Do correct #include for modprobed uprobes.ko;
	set need_uprobes in pass 2.
	* session.h: Add need_uprobes

	* runtime/staprun/common.c: Add -u option -> need_uprobes
	* runtime/staprun/staprun_funcs.c: Generalize insert_module()
	to support inserting uprobes.ko.
	* runtime/staprun/staprun.c: Add enable_uprobes().  insert_module
	call becomes insert_stap_module().
	* runtime/staprun/staprun.h: Reflect insert_module() and
	need_uprobes changes

	* runtime/uprobes/*.[c,h]: uprobes is built as a module, 
	rather than included into the source of the stap-generated 
	module.
	* runtime/uprobes/Makefile: Added

2007-10-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 1119
	* elaborate.cxx (semantic_pass_opt[12]): Warn on elided