@@ -209,8 +209,8 @@ probe nfsd.proc2.lookup = kernel.function("nfsd_proc_lookup") ?,
         version = 2
 	fh = __get_fh($argp,1)
 
-	filename = kernel_string($argp->name)
 	filelen = $argp->len
+	filename = kernel_string_n($argp->name, filelen)
 
 	name = "nfsd.proc2.lookup"
 	argstr = sprintf("%s",filename)
@@ -233,8 +233,8 @@ probe nfsd.proc3.lookup = kernel.function("nfsd3_proc_lookup") ?,
         version = 3
 	fh = __get_fh($argp,1)
 
-	filename = kernel_string($argp->name)
 	filelen = $argp->len
+	filename  = kernel_string_n($argp->name, filelen)
 
 	name = "nfsd.proc3.lookup"
 	argstr = sprintf("%s",filename)
@@ -511,8 +511,8 @@ probe nfsd.proc2.create = kernel.function("nfsd_proc_create")?,
         version = 2
 	fh = __get_fh($argp,8)
 
-	filename  = kernel_string($argp->name) 
 	filelen = $argp->len
+	filename  = kernel_string_n($argp->name, filelen)
 
 	name = "nfsd.proc2.create"
 	argstr = sprintf("%s",filename)
@@ -534,8 +534,8 @@ probe nfsd.proc3.create = kernel.function("nfsd3_proc_create")?,
         version = 3
 	fh = __get_fh($argp,9)
 
-	filename  = kernel_string($argp->name) 
 	filelen = $argp->len
+	filename  = kernel_string_n($argp->name, filelen)
 	
 	name = "nfsd.proc3.create"
 	argstr = sprintf("%s",filename)
@@ -576,8 +576,8 @@ probe nfsd.proc2.remove = kernel.function("nfsd_proc_remove")?,
         version = 2
 	fh = __get_fh($argp,10)
 
-	filename  = kernel_string($argp->name) 
 	filelen = $argp->len
+	filename  = kernel_string_n($argp->name, filelen)
 
 	name = "nfsd.proc2.remove"
 	argstr = sprintf("%s",filename)
@@ -599,8 +599,8 @@ probe nfsd.proc3.remove = kernel.function("nfsd3_proc_remove")?,
         version = 3
 	fh = __get_fh($argp,11)
 
-	filename  = kernel_string($argp->name) 
 	filelen = $argp->len
+	filename  = kernel_string_n($argp->name, filelen)
 	
 	name = "nfsd.proc3.remove"
 	argstr = sprintf("%s",filename)
@@ -643,10 +643,10 @@ probe nfsd.proc2.rename =  kernel.function("nfsd_proc_rename")?,
 	fh = __get_fh($argp,12)
 	tfh = __get_fh($argp,13)
 
-	filename  = kernel_string($argp->fname) 
 	filelen = $argp->flen
-	tname = kernel_string($argp->tname)
+	filename  = kernel_string_n($argp->fname, filelen)	
 	tlen = $argp->tlen
+	tname = kernel_string_n($argp->tname, tlen)
 
 	name = "nfsd.proc2.rename"
 	argstr = sprintf("%s,%s",filename,tname)
@@ -669,10 +669,10 @@ probe nfsd.proc3.rename =  kernel.function("nfsd3_proc_rename")?,
 	fh = __get_fh($argp,14)
 	tfh = __get_fh($argp,15)
 
-	filename  = kernel_string($argp->fname) 
 	filelen = $argp->flen
-	tname = kernel_string($argp->tname)
+	filename  = kernel_string_n($argp->fname, filelen)	
 	tlen = $argp->tlen
+	tname = kernel_string_n($argp->tname, tlen)
 
 	name = "nfsd.proc3.rename"
 	argstr = sprintf("%s,%s",filename,tname)
@@ -915,8 +915,8 @@ probe nfsd.lookup = kernel.function("nfsd_lookup")?,
 {
 	fh = __svc_fh($fhp)
 
-	filename = kernel_string($name)
 	filelen = $len
+	filename = kernel_string_n($name, filelen)
 
 	name = "nfsd.lookup"
 	argstr = sprintf("%s",filename)
@@ -947,8 +947,8 @@ probe nfsd.create = kernel.function("nfsd_create")?,
 {
 	fh = __svc_fh($fhp)
 
-	filename = kernel_string($fname)
 	filelen = $flen
+	filename = kernel_string_n($fname, filelen)
 	type = $type
 	iap_valid = $iap->ia_valid
 	iap_mode = $iap->ia_mode
@@ -987,8 +987,8 @@ probe nfsd.createv3 = kernel.function("nfsd_create_v3")?,
 {
 	fh = __svc_fh($fhp)
 
-	filename = kernel_string($fname)
 	filelen = $flen
+	filename = kernel_string_n($fname, filelen)
 	iap_valid = $iap->ia_valid
 	iap_mode = $iap->ia_mode
 	truncp = $truncp
@@ -1022,8 +1022,8 @@ probe nfsd.unlink = kernel.function("nfsd_unlink")?,
 {
 	fh = __svc_fh($fhp)
 
-	filename = kernel_string($fname)
 	filelen = $flen
+	filename = kernel_string_n($fname, filelen)
 	type = $type
 
 	name = "nfsd.unlink"
@@ -1056,10 +1056,10 @@ probe nfsd.rename =  kernel.function("nfsd_rename")?,
 	fh = __svc_fh($ffhp)
 	tfh = __svc_fh($tfhp)
 
-	filename  = kernel_string($fname) 
 	filelen = $flen
-	tname = kernel_string($tname)
+	filename  = kernel_string_n($fname, filelen)
 	tlen = $tlen
+	tname = kernel_string_n($tname, tlen)
 
 	name = "nfsd.rename"
 	argstr = sprintf("%s,%s",filename,tname)
