@@ -1,3 +1,14 @@
+2007-10-15  Zhaolei  <zhaolei@cn.fujitsu.com>
+
+	From Cai Fei <caifei@cn.fujitsu.com>
+	* conversions.stp: Add a function kernel_string_n for copy
+	non-0-terminated string with fixed length from kernel space at
+	given address.
+	* stapfuncs.5.in: Add kernel_string_n.
+	* nfsd.stp: Using kernel_string_n to copy non-0-terminated string
+	with fixed length from kernel space at given address.
+	* nfs_proc.stp: Ditto.
+
 2007-10-12  Zhaolei  <zhaolei@cn.fujitsu.com>
 
 	* queue_stats.stp (qsq_start): Fix problem that compile fails when
